joboutput/gpu_19413447.err
Loaded dependency [python3/3.9.10]: gcc/10.3.0-binutils-2.36.1
Loaded module: python3/3.9.10

Loading python3/3.9.10
  Loading requirement: gcc/10.3.0-binutils-2.36.1
Loaded module: cuda/11.6
  File "/zhome/8d/e/117461/Deep-Learning/unet.py", line 2
    %matplotlib inline
    ^
SyntaxError: invalid syntax
